Bug 123054 - FILEOPEN DOCX Paragraph style changes (regression)
Summary: FILEOPEN DOCX Paragraph style changes (regression)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisected, bisected, filter:docx, regression
: 124926 (view as bug list)
Depends on:
Blocks: DOCX-Styles
  Show dependency treegraph
 
Reported: 2019-01-30 10:47 UTC by NISZ LibreOffice Team
Modified: 2020-11-08 09:13 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Writer. (158.04 KB, image/png)
2019-01-30 10:51 UTC, NISZ LibreOffice Team
Details
Example file from Word. (28.77 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-01-30 10:53 UTC, NISZ LibreOffice Team
Details
bug selected (562.52 KB, image/png)
2019-02-07 15:49 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-01-30 10:47:52 UTC
Description:
Paragraph style in DOCX documents created with Microsoft Word changes when the document is opened in LibreOffice Writer 6.3.0.0.alpha0+ – it was good in LibreOffice Writer 6.2.0.0.alpha1+.

Steps to Reproduce:
1.	Open the attached DOCX file in LibreOffice Writer 6.2.0.0.alpha1+.
2.	Open a copy in LibreOffice Writer 6.3.0.0.alpha0+.
3.	Compare the original file opened in Writer 6.2.0.0.alpha1+ (good) and 6.3.0.0.alpha0+ (bad).
4.	View the attached screenshot.
5.	Notice, that the paragraph style of second empty row changes.

Actual Results:
Paragraph style of the second empty row changes to Default Style when the document is opened in LibreOffice Writer 6.3.0.0.alpha0+.

Expected Results:
Paragraph style of the second empty row should be No Spacing style when the document is opened in LibreOffice Writer 6.3.0.0.alpha0+ like in LibreOffice Writer 6.2.0.0.alpha1+.


Reproducible: Always


User Profile Reset: No



Additional Info:
Bibisected with: bibisect-win32-6.3

Regression introduced by:
commit 836cbf3680afd9198abf3a64be698f8fe256dd5a
author László Németh <nemeth@numbertext.org> Tue Nov 20 22:36:58 2018 +0100
committer László Németh <nemeth@numbertext.org> Wed Nov 21 10:28:38 2018 +0100
tree 0f897432fe20d6c2840c0db79438e3d8c320363e
parent 60e6593f042e3e2869ece89cc43390b3254b3205



Bibisect log:
 git bisect log
# bad: [2b0dda675edb94a5ad9be71f395b94fc681d2263] source 17dd2662ccfa9d04efbea74e5d7548db5b2126d4
# good: [ea94942caaf195b8d8b2d5c2abb523359ab390e7] source a20a2d7e0d28658f2d9089da076961a599833a28
git bisect start 'origin/master' 'oldest'
# bad: [243b17532c3dbfe5a0360b4ff49eebe75f91b6eb] source bf1932fe2133e5954441be6299e6788c17e1d1b9
git bisect bad 243b17532c3dbfe5a0360b4ff49eebe75f91b6eb
# bad: [55745b297eb845a74702b140f52ee46b7e847e8a] source dd0e6849297c18aabe4fc29c0340a2ed1e474eaf
git bisect bad 55745b297eb845a74702b140f52ee46b7e847e8a
# good: [0884989a98e303f3832031c433f6c873db25f425] source 973a3dd9623107c18c6765d0b247aa34018a0447
git bisect good 0884989a98e303f3832031c433f6c873db25f425
# good: [3d31f4c11c81229043fccea075aa3ce9a976a714] source 9cc6b8ebe366a909aa8406f26c6775554c65b439
git bisect good 3d31f4c11c81229043fccea075aa3ce9a976a714
# good: [528da06e4fc522f6c29dc0aee82170c7d0f6d89a] source 506173a7f42f34821238a63f3f8c7362c9fae9d9
git bisect good 528da06e4fc522f6c29dc0aee82170c7d0f6d89a
# bad: [5f970fd5225e901b83713433c3207cc62f8c0bb4] source 8ee959b4534835306741e5eeeed385cb2ee4152f
git bisect bad 5f970fd5225e901b83713433c3207cc62f8c0bb4
# bad: [d5059b33a883271b6dde7c390eac90cebb033506] source 89b598e7db1f2964a60045739d6b3ba255bb6600
git bisect bad d5059b33a883271b6dde7c390eac90cebb033506
# bad: [b2f9278bbd58daa694c6f0b48e90cf03d1d1cf53] source 0acbfd466aa8070c99c1d93f499fa5abb6b0d86a
git bisect bad b2f9278bbd58daa694c6f0b48e90cf03d1d1cf53
# good: [5fb787d6f1d119842dd9be9a8a004a55262e3d38] source 231ee1cbaf34a85b3ef8c1e2fe2d8b1918a42408
git bisect good 5fb787d6f1d119842dd9be9a8a004a55262e3d38
# bad: [4ff695ae64e94620f73e26aed0a075e933ae05c9] source 836cbf3680afd9198abf3a64be698f8fe256dd5a
git bisect bad 4ff695ae64e94620f73e26aed0a075e933ae05c9
# good: [5b21929c50f09fa589df0bfb5736d0163195e41e] source 60e6593f042e3e2869ece89cc43390b3254b3205
git bisect good 5b21929c50f09fa589df0bfb5736d0163195e41e
# first bad commit: [4ff695ae64e94620f73e26aed0a075e933ae05c9] source 836cbf3680afd9198abf3a64be698f8fe256dd5a
Comment 1 NISZ LibreOffice Team 2019-01-30 10:51:27 UTC
Created attachment 148753 [details]
Screenshot of the problem in Writer.
Comment 2 NISZ LibreOffice Team 2019-01-30 10:53:07 UTC
Created attachment 148754 [details]
Example file from Word.
Comment 3 raal 2019-01-31 14:56:41 UTC
Confirm. Version: 6.3.0.0.alpha0+
Build ID: 1ac54de7869d5809a312acad0a37d48028ad9d3b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: cs-CZ (cs_CZ.UTF-8); UI-Language: en-US
Comment 4 László Németh 2019-02-05 19:10:26 UTC
Note: reverting the bibisected commit doesn't solve or change the problem.
Comment 5 Xisco Faulí 2019-02-06 18:33:26 UTC
(In reply to NISZ LibreOffice Team from comment #0)
> Actual Results:
> Paragraph style of the second empty row changes to Default Style when the
> document is opened in LibreOffice Writer 6.3.0.0.alpha0+.

Do you mean on page 1?
Paragraph style is No Spacing in

Version: 6.3.0.0.alpha0+
Build ID: 202d9af5ab4291a8f867791293477a18ae48051d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Please elaborate. Moving to NEEDINFO
Comment 6 NISZ LibreOffice Team 2019-02-07 08:53:57 UTC
Yes, i meant the first page. It is the second empty paragraph on the attached screenshot. On the document it is the 20th paragraph. I could reproduce it in this LO version:

Version: 6.3.0.0.alpha0+
Build ID: 82fb7f9f90a3ba9d53b3412124e513aa78ddca10
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-02-06_01:14:34
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 7 Xisco Faulí 2019-02-07 13:57:01 UTC
(In reply to NISZ LibreOffice Team from comment #6)
> Yes, i meant the first page. It is the second empty paragraph on the
> attached screenshot. On the document it is the 20th paragraph. I could
> reproduce it in this LO version:
> 
> Version: 6.3.0.0.alpha0+
> Build ID: 82fb7f9f90a3ba9d53b3412124e513aa78ddca10
> CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
> TinderBox: Win-x86@42, Branch:master, Time: 2019-02-06_01:14:34
> Locale: hu-HU (hu_HU); UI-Language: en-US
> Calc: threaded

I'm sorry but the screenshot isn't clear about where the cursor is ? What do you mean it's the 20th paragraph ?
Comment 8 NISZ LibreOffice Team 2019-02-07 15:49:53 UTC
Created attachment 148982 [details]
bug selected
Comment 9 Xisco Faulí 2019-02-07 20:20:55 UTC
Thanks for the screnshot. I can reproduce it now in

Version: 6.3.0.0.alpha0+
Build ID: 6287a4f0d18df7f195d1f14b7c24536317463a23
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 10 Xisco Faulí 2019-02-07 20:24:25 UTC
(In reply to László Németh from comment #4)
> Note: reverting the bibisected commit doesn't solve or change the problem.

Hi László Németh,
I reverted the commit locally and indeed the issue is fixed. Please check the new screenshot attached for clarification
Comment 11 Xisco Faulí 2019-02-12 16:36:45 UTC
Adding Cc: to László Németh
Comment 12 Commit Notification 2019-03-11 09:03:07 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/b3265d6e11200a55a068902e2d78c2de374e973b%5E%21

tdf#123054 track changes: fix paragraph style regression

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2019-03-13 12:01:54 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 8aa579830b20072af8d6e149d6b279362fe98b91
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!
Comment 14 Commit Notification 2019-04-05 08:49:47 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/bf26bf309c580f153dd6ca965d12f7193ca32754%5E%21

tdf#123054 track changes: fix paragraph style regression

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Aron Budea 2019-04-24 09:56:11 UTC
*** Bug 124926 has been marked as a duplicate of this bug. ***