tdf#123054 track changes: fix paragraph style regression

caused by the commit 173069a1f6ac060a06f04908a94a1a8420461795
"fix paragraph join with change tracking" and commit
1bbbe57dfc0b43d6b5444798d77dcdf5e4e76e49 "change tracking:
show layout changes at paragraph join".

Change-Id: I05203255b04094ae118fd4967398045d6e0ad9fa
Reviewed-on: https://gerrit.libreoffice.org/68947
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>