sw/source/core/doc/DocumentRedlineManager.cxx
@@ -1916,37 +1916,40 @@ DocumentRedlineManager::AppendRedline(SwRangeRedline* pNewRedl, bool const bCall
             }
             else
             {
-                if (pStt->nContent == 0)
+                if ( bCallDelete && nsRedlineType_t::REDLINE_DELETE == pNewRedl->GetType() )
                 {
-                    // tdf#54819 to keep the style of the paragraph
-                    // after the fully deleted paragraphs (normal behaviour
-                    // of editing without change tracking), we copy its style
-                    // to the first removed paragraph.
-                    SwTextNode* pDelNode = pStt->nNode.GetNode().GetTextNode();
-                    SwTextNode* pTextNode = pEnd->nNode.GetNode().GetTextNode();
-                    if (pDelNode != nullptr && pTextNode != nullptr && pDelNode != pTextNode)
-                        pTextNode->CopyCollFormat( *pDelNode );
-                }
-                else if ( bCallDelete && nsRedlineType_t::REDLINE_DELETE == pNewRedl->GetType() )
-                {
-                    // tdf#119571 update the style of the joined paragraph
-                    // after a partially deleted paragraph to show its correct style
-                    // in "Show changes" mode, too. All removed paragraphs
-                    // get the style of the first (partially deleted) paragraph
-                    // to avoid text insertion with bad style in the deleted
-                    // area later.
-                    SwContentNode* pDelNd = pStt->nNode.GetNode().GetContentNode();
-                    SwContentNode* pTextNd = pEnd->nNode.GetNode().GetContentNode();
-                    SwTextNode* pDelNode = pStt->nNode.GetNode().GetTextNode();
-                    SwTextNode* pTextNode;
-                    SwNodeIndex aIdx( pEnd->nNode.GetNode() );
-
-                    while (pDelNode != nullptr && pTextNd != nullptr && pDelNd->GetIndex() < pTextNd->GetIndex())
+                    if ( pStt->nContent == 0 )
                     {
-                        pTextNode = pTextNd->GetTextNode();
-                        if (pTextNode && pDelNode != pTextNode )
-                            pDelNode->CopyCollFormat( *pTextNode );
-                        pTextNd = SwNodes::GoPrevious( &aIdx );
+                        // tdf#54819 to keep the style of the paragraph
+                        // after the fully deleted paragraphs (normal behaviour
+                        // of editing without change tracking), we copy its style
+                        // to the first removed paragraph.
+                        SwTextNode* pDelNode = pStt->nNode.GetNode().GetTextNode();
+                        SwTextNode* pTextNode = pEnd->nNode.GetNode().GetTextNode();
+                        if (pDelNode != nullptr && pTextNode != nullptr && pDelNode != pTextNode)
+                            pTextNode->CopyCollFormat( *pDelNode );
+                    }
+                    else
+                    {
+                        // tdf#119571 update the style of the joined paragraph
+                        // after a partially deleted paragraph to show its correct style
+                        // in "Show changes" mode, too. All removed paragraphs
+                        // get the style of the first (partially deleted) paragraph
+                        // to avoid text insertion with bad style in the deleted
+                        // area later.
+                        SwContentNode* pDelNd = pStt->nNode.GetNode().GetContentNode();
+                        SwContentNode* pTextNd = pEnd->nNode.GetNode().GetContentNode();
+                        SwTextNode* pDelNode = pStt->nNode.GetNode().GetTextNode();
+                        SwTextNode* pTextNode;
+                        SwNodeIndex aIdx( pEnd->nNode.GetNode() );
+
+                        while (pDelNode != nullptr && pTextNd != nullptr && pDelNd->GetIndex() < pTextNd->GetIndex())
+                        {
+                            pTextNode = pTextNd->GetTextNode();
+                            if (pTextNode && pDelNode != pTextNode )
+                                pDelNode->CopyCollFormat( *pTextNode );
+                            pTextNd = SwNodes::GoPrevious( &aIdx );
+                        }
                     }
                 }
                 bool const ret = mpRedlineTable->Insert( pNewRedl );
